[package]
name = "deployc-builder"
version = "0.1.0"
authors = ["Jeremy Jacobson <jjacobson93@gmail.com>"]

[dependencies]
byteorder = "1.2.3"
tar = "0.4.15"
tempfile = "3.0.2"
tokio = "0.1.6"
tokio-process = "0.2.2"
uuid = { version = "0.6.5", features = ["v4"] }

[[bin]]
name = "deployc-builder"
path = "src/main.rs"
